--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,8 @@
   color: #fee715;
   font-size: 24px;
   margin: 0;
-  padding: 25px 200px;
+  height: 130px;
+  width: 100%;
   background-color: #101820;
   display: flex;
   justify-content: center;
@@ -74,9 +75,10 @@ img:hover {
 }
 
 table {
-  width: 50%;
+  width: 40%;
   border-collapse: collapse;
-  margin: 0 auto;
+  margin: auto;
+  table-layout: fixed;
   padding-top: 50px;
 }
 
@@ -84,6 +86,5 @@ th,
 td {
   border: 1px solid #ccc;
   padding: 10px;
-  text-align: left;
   text-align: center;
 }
